--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- cache-busted color.css to avoid stale styles -->
     <link rel="stylesheet" href="css/color.css">
     <meta name="apple-mobile-web-app-status-bar-style" content="#1d86d7">
-    <meta name="theme-color" content="#1d86d7" />
+    <meta name="theme-color" content="#1d86d7">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="NJ Transit">
     <link rel="apple-touch-icon" href="assets/icon.png">
