--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- cache-busted color.css to avoid stale styles -->
     <link rel="stylesheet" href="css/color.css">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#1d86d7">
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="#1d86d7"> -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#1d86d7">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="theme-color" content="#1d86d7">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="NJ Transit">
